<resources>
    <string name="app_name">Inhaler</string>
    <string name="punch">Register Punch</string>
    <string name="average_daily">Daily Average</string>
    <string name="maximum">Daily Maximum</string>
    <string name="history">History</string>
    <string name="average_monthly">Monthly Average</string>
    <string name="total">Total Punches</string>
    <string name="statistics">Statistics</string>
    <string name="chartLabel">Punches</string>
    <string name="punch_success">Punch success</string>
    <string name="punch_deleted">Punch deleted</string>
    <string name="delete_history_entry_confirmation">Are you sure want to delete this item?</string>
    <string name="delete_confirmation_title">Deletion confirmation</string>
    <string name="punch_delete_cancel">Punch deletion canceled</string>
    <string name="date_label">Date</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="punch_edit_success">Punch edited successfully</string>
    <string name="inhaler">Inhaler</string>
</resources>
